# binobj

./: .buildinfo  .bumpversion.cfg  .gitignore  .mypy.ini  .pylintrc  .pytest.ini  .ruff.toml  .travis.yml  CHANGELOG.html  CHANGELOG.rst  LICENSE  LICENSE.txt  Makefile  README.rst  basics.html  binobj.decorators.html  binobj.errors.html  binobj.fields.base.html  binobj.fields.containers.html  binobj.fields.html  binobj.fields.numeric.html  binobj.fields.stringlike.html  binobj.helpers.html  binobj.html  binobj.pep526.html  binobj.structures.html  binobj.typedefs.html  binobj.varints.html  dev-requirements.txt  dev_requirements.txt  genindex.html  index.html  lint-requirements.txt  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  (+4 more)
.doctrees/: CHANGELOG.doctree  basics.doctree  binobj.decorators.doctree  binobj.doctree  binobj.errors.doctree  binobj.fields.base.doctree  binobj.fields.containers.doctree  binobj.fields.doctree  binobj.fields.numeric.doctree  binobj.fields.stringlike.doctree  binobj.helpers.doctree  binobj.pep526.doctree  binobj.structures.doctree  binobj.typedefs.doctree  binobj.varints.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: ci.yml  sphinx-to-gh.yml
_sources/: CHANGELOG.rst.txt  binobj.decorators.rst.txt  binobj.errors.rst.txt  binobj.fields.base.rst.txt  binobj.fields.containers.rst.txt  binobj.fields.numeric.rst.txt  binobj.fields.rst.txt  binobj.fields.stringlike.rst.txt  binobj.helpers.rst.txt  binobj.pep526.rst.txt  binobj.rst.txt  binobj.structures.rst.txt  binobj.typedefs.rst.txt  binobj.varints.rst.txt  modules.rst.txt
_static/: documentation_options.js
binobj/: __init__.py  decorators.py  errors.py  fields.py  helpers.py  iohelpers.py  mypy_plugin.py  pep526.py  pep586.py  serialization.py  structures.py  typedefs.py  validation.py  varints.py
binobj/fields/: __init__.py  base.py  bases.py  common.py  containers.py  numeric.py  stringlike.py
docs/: Makefile  make.bat
docs/source/: CHANGELOG.rst  basics.rst  conf.py  index.rst
tests/: conftest.py  decorators_test.py  end2end_test.py  errors_test.py  fields_test.py  helpers_test.py  pep526_no_future_test.py  pep526_test.py  serialization_test.py  structures_test.py  validators_test.py  varints_test.py
tests/fields/: base_test.py  containers_test.py  numeric_test.py  stringlike_test.py
tests/full_examples/: bmp_test.py  cpio.py  cpio_test.py  fat_test.py  wav_test.py
