[tool.poetry]
name = "binobj"
version = "0.11.4"
description = "A Python library for reading and writing structured binary data."
authors = ["Diego Argueta <620513-dargueta@users.noreply.github.com>"]
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
license = "BSD-3"
include = ["py.typed"]
exclude = [
    "docs",
    "tests",
]

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = ">=4.0"

[tool.poetry.group.dev.dependencies]
# For reproducibility please pin all direct dependencies as tightly as possible,
# down to the patch version.
black = "24.4.2"
coverage = "7.5.4"
coverage-pyver-pragma = "0.3.3"
flake8 = "7.1.0"
flake8-awesome = "1.3.0"
flake8-black = "0.3.6"
flake8-blind-except = "0.2.1"
flake8-bugbear = "24.4.26"
flake8-builtins = "2.5.0"
flake8-comprehensions = "3.15.0"
flake8-debugger = "4.1.2"
flake8-deprecated = "2.2.1"
flake8-docstrings = "1.7.0"
flake8-implicit-str-concat = "0.4.0"
flake8-isort = "6.1.1"
flake8-logging-format = "2024.24.12"
flake8-loopy = "1.1.0"
flake8-simplify = "0.21.0"
# Plugin broke and gave a bunch of false alarms
# flake8-unused-arguments = "0.0.13"
isort = "5.13.2"
mypy = {version = "1.10.1", markers = "platform_python_implementation == 'CPython'"}
pytest = "8.2.2"
pytest-cov = "5.0.0"
pytest-randomly = "3.15.0"


[tool.poetry.urls]
Homepage = "https://dargueta.github.io/binobj"
Repository = "https://github.com/dargueta/binobj"
Documentation = "https://dargueta.github.io/binobj"
"Bug Tracker" = "https://github.com/dargueta/binobj/issues"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
