[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# Poetry

[tool.poetry]
name = "binobj"
version = "0.12.0"
description = "A Python library for reading and writing structured binary data."
authors = ["Diego Argueta <620513-dargueta@users.noreply.github.com>"]
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
license = "BSD-3-Clause"
include = ["py.typed", "LICENSE.txt"]
exclude = [
    "docs",
    "tests",
]

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = ">=4.0"
typing-extensions = ">=4.4"

[tool.poetry.group.dev.dependencies]
# For reproducibility please pin all direct dependencies as tightly as possible,
# down to the patch version.
coverage = "7.6.1"
coverage-pyver-pragma = "0.3.3"
mypy = {version = "1.11.2", markers = "platform_python_implementation == 'CPython'"}
ruff = "0.6.4"
pytest = "8.3.2"
pytest-cov = "5.0.0"
pytest-randomly = "3.15.0"

[tool.poetry.urls]
Homepage = "https://dargueta.github.io/binobj"
Repository = "https://github.com/dargueta/binobj"
Documentation = "https://dargueta.github.io/binobj"
"Bug Tracker" = "https://github.com/dargueta/binobj/issues"


# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# Ruff

[tool.ruff.lint]
exclude = ["docs/*"]
select = ["ALL"]
extend-ignore = [
    "ANN401",
    "COM812",
    "D105",
    "D107",
    "DTZ",
    "EM",
    "ERA001",
    "FBT",
    "FIX002",
    "PLR2004",
    "TD003",
    "TRY003",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "PLC0414"]
"tests/*" = ["ANN", "D", "S101", "S311"]
"tests/pep526_*.py" = ["N802", "N803", "I002"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["binobj"]
lines-after-imports = 2
order-by-type = false
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 9

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.pydocstyle]
convention = "google"
