[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "binobj"
version = "0.12.0"
description = "A Python library for reading and writing structured binary data."
authors = [
    { name = "Diego Argueta", email = "620513-dargueta@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
license = "BSD-3-Clause"
include = ["py.typed", "LICENSE.txt"]
exclude = [
    "docs",
    "tests",
]
requires-python = ">=3.10"
dependencies = [
    "more-itertools >= 4.0",
    "typing-extensions >= 4.4",
]

[project.urls]
Homepage = "https://dargueta.github.io/binobj"
Repository = "https://github.com/dargueta/binobj"
Documentation = "https://dargueta.github.io/binobj"
"Bug Tracker" = "https://github.com/dargueta/binobj/issues"

# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# Poetry

[tool.poetry]
requires-poetry = ">=2.0"
readme = "README.rst"

[tool.poetry.group.dev.dependencies]
# For reproducibility please pin all direct dependencies as tightly as possible,
# down to the patch version.
coverage = "7.10.1"
coverage-pyver-pragma = "0.3.3"
mypy = {version = "1.17.1", markers = "platform_python_implementation == 'CPython'"}
pytest = "8.4.1"
pytest-cov = "6.2.1"
pytest-randomly = "3.16.0"
# Due to this bug https://stackoverflow.com/q/75307814
setuptools = "*"
